# jaz_api_v03

./: .flake8  README.md  db.env  docker-compose.yml  git_workflow_backup.yml  mysql_db.env  pyproject.toml  requirements-dev.txt  web.env
.github/workflows/: deploy_main.yml  deploy_uat_branch.yml  jazk-api-AutoDeployTrigger-82355ad1-7397-423f-91e3-1682e820c708.yml  jazk-api-app-AutoDeployTrigger-280f1a53-6001-415b-a83e-38c5a297364f.yml  jazk-api-app-AutoDeployTrigger-d1c9c379-2953-43bb-a034-b2a25a4a98a6.yml  jazk-api-app2-AutoDeployTrigger-4a108647-d89c-495d-ad5b-c28c794b570d.yml  jazk-api-app2-AutoDeployTrigger-ae88a2dc-90a0-49b1-a236-f3e519702ca6.yml  jazk-api-app2-AutoDeployTrigger-d82fd475-fa13-4771-8913-7f09346e5600.yml  jazk-api-app2-AutoDeployTrigger-f194d340-c548-44f4-beba-7bbdb08eb986.yml  jazk-prod-container-app-AutoDeployTrigger-0ada4ff0-1f52-4c86-bb8f-c17a5e348326.yml
db/: Dockerfile  create.sql
jaz_api_v03/: Dockerfile  README.md  gunicorn.conf.py  local.dockerfile  requirements-dev.txt  requirements.txt
jaz_api_v03/migrations/: env.py
jaz_api_v03/migrations/versions/: 064972b3741a_motor_certs_table.py  079defacff37_init_ping_tables.py  0b176b23d7c9_init_eav.py  0e47e1d4c9e5_json_eav.py  128ad688aae5_quote_gender_and_dob.py  14b957126cc6_premia_object.py  157f679f4a7e_hypothecation_fields.py  1ead85db9edd_hypothecation_json_field.py  27c277f30927_serial_num_cols.py  340fe63506f8_update_payload_out.py  342ad69dcc32_init_user_table.py  (+23 more)
jaz_api_v03/src/: main.py
jaz_api_v03/tests/: conftest.py
mysql_db/: Dockerfile  docker-compose.yml
(+107 files in other folders)
