[project]
name = "jaz_api_v03"
description = "JAZK API Repository"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Matthew F. Kimweli", email = "matthew.kimweli@allianz.com" },
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "jaz_api_v03.src.ping.*"
ignore_missing_imports = true